...
        imageView.translatesAutoresizingMaskIntoConstraints = false
        return imageView
    }()
    
    private lazy var loginButton: UIButton = {
        let button = UIButton(type: .system)
        button.accessibilityIdentifier = "Authenticate"
        button.setTitle("Войти", for: .normal)
        button.titleLabel?.font = UIConstants.loginButtonFont
        button.setTitleColor(UIColor(resource: .ypBlackIOS), for: .normal)
        button.backgroundColor = UIColor(resource: .ypWhiteIOS)
        button.layer.masksToBounds = true
        button.layer.cornerRadius = UIConstants.loginButtonCornerRadius
...
